--- a/public/receive.html
+++ b/public/receive.html
@@ -9,6 +9,8 @@
     <title>Document</title>
 </head>
 <body>
+    <p>The room is created. Invite and send the room details to the signer.</p>
+    
     <p>
         once the signer starts signing, the socket connection will send encrypted x and y data to the receiver who's on this page
     </p>
