move axidraw in room

--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="/signerlogin">i am the signer</a>
+    <a href="/signer">i am the signer</a>
     <br>
-    <a href="/receiverlogin">i am the receiver</a>
+    <a href="/receiver">i am the receiver</a>
 </body>
 </html>
