--- a/public/receive.html
+++ b/public/receive.html
@@ -10,12 +10,8 @@
 </head>
 <body>
     <p>The room is created. Invite and send the room details to the signer.</p>
-    
-    <p>
-        once the signer starts signing, the socket connection will send encrypted x and y data to the receiver who's on this page
-    </p>
-    <p>
-        once the hased data is obtained and decrypted with the key, on this page, call the "/move" api to control the  node js app running in the background for sending serial to the axidraw
-    </p>
+    <p>once the signer starts signing, the socket connection will send encrypted x and y data to the receiver who's on this page</p>
+    <p>once the hased data is obtained and decrypted with the key, on this page, call the "/move" api to control the  node js app running in the background for sending serial to the axidraw</p>
+    <p>instruction to home machine</p>
 </body>
 </html>
