pen up and down works like a charm

--- a/public/receiver.html
+++ b/public/receiver.html
@@ -30,9 +30,9 @@
         <div id="signer_found" style="display: none;">
             <p>Meanwhile, please set up your Axidraw and place it over the document for signature.</p>
             <p>Press ready when you're done</p>
-            <button id="ready">Ready</button>
+            <button id="ready">Ready</button><br>
             <!-- if not ready signer cannot draw -->
-            <div id="canvascontainer"></div>
+            <div id="canvascontainer" style="display: none;"></div>
         </div>
         <!-- <p>once the hashed data is obtained and decrypted with the key, on this page, call the "/move" api to control the
             node js app running in the background for sending serial to the axidraw</p>
