--- a/public/receiver.html
+++ b/public/receiver.html
@@ -10,7 +10,11 @@
     <script src="/js/p5.min.js"></script>
     <script defer language="javascript" type="text/javascript" src="js/receiver.js"></script>
     <script defer language="javascript" type="text/javascript" src="js/receive.js"></script>
-    <title>Document</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css">
+    <title>Receiver</title>
 </head>
 
 <body>
