--- a/public/signer.html
+++ b/public/signer.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,8 +10,13 @@
     <script src="/js/p5.min.js"></script>
     <script defer language="javascript" type="text/javascript" src="js/signer.js"></script>
     <script defer language="javascript" type="text/javascript" src="js/sign.js"></script>
-    <title>Document</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css">
+    <title>Signer</title>
 </head>
+
 <body>
     <div id="signerlogin">
         <h1>Join a signing meeting</h1>
@@ -33,4 +39,5 @@
         <!-- <p>for every point of the stroke is detected, send xy values to the other side</p>     -->
     </div>
 </body>
+
 </html>
