added text in frontend

--- a/public/receiver.html
+++ b/public/receiver.html
@@ -30,7 +30,8 @@
         <div id="cipher" style="display: none">the cipher</div>
     </div>
     <div id="receive" style="display: none">
-        <p>The room is created. Invite and send the room details to the signer.</p>
+        <p>The secure* meeting room is created. Now invite and send the room details to the signer.</p>
+        <div>*Your password never left your local machine.</div>
         <div id="signer_found" style="display: none;">
             <p>Meanwhile, please set up your Axidraw and place it over the document for signature.</p>
             <p>Press ready when you're done</p>
