--- a/serial-app/src/index.html
+++ b/serial-app/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta http-equiv="Content-Security-Policy" content="default-src 'self'">
-    <title>Hello World!</title>
+    <title>💸 BankHeist Serial</title>
     <link rel="stylesheet" href="index.css">
     <script defer src="render.js"></script>
   </head>
