serial app has pen down up buttons

--- a/serial-app/src/index.html
+++ b/serial-app/src/index.html
@@ -18,5 +18,8 @@
     </p>
     <textarea name="command" id="command" cols="30" rows="10"></textarea>
     <button id="send">send</button>
+    <br>
+    <button id="pen up">pen up</button>
+    <button id="pen down">pen down</button>
   </body>
 </html>
