minimal front end css

--- a/public/index.html
+++ b/public/index.html
@@ -12,10 +12,15 @@
 </head>
 
 <body>
-    <h1>💸 BankHeist</h1>
-    <a href="/signer">i am the signer</a>
-    <br>
-    <a href="/receiver">i am the receiver</a>
+    <header>
+        <h1>💸 BankHeist</h1>
+    </header>
+    <main>
+        <a href="/signer" class="left">i am the signer</a>
+        <br>
+        <a href="/receiver" class="right">i am the receiver</a>
+    </main>
+
 </body>
 
 </html>
