--- a/public/receiver.html
+++ b/public/receiver.html
@@ -124,11 +124,11 @@
                                     <div class="column">
                                         <div id="canvascontainer" style="border: solid black 1px"></div>
                                     </div>
+                                </div>
+                                <div class="columns">
                                     <div class="column">
                                         <div class="field">
                                             <button id="clear" class="button is-danger is-outlined">Clear</button>
-                                        </div>
-                                        <div class="field">
                                             <button id="ready" class="button  is-success is-outlined">Ready</button>
                                         </div>
                                     </div>
