--- a/public/signer.html
+++ b/public/signer.html
@@ -36,8 +36,8 @@
         <div class="container">
             <div id="signerlogin">
                 <div class="columns">
-                    <h1 class="title">Join a signing meeting</h1>
                     <div class="column is-half">
+                        <h1 class="title">Join a signing meeting</h1>
                         <div class="columns">
                             <div class="column">
                                 <div class="field">
@@ -108,6 +108,8 @@
                                     <div class="column">
                                         <div id="canvascontainer" style="border: solid black 1px"></div>
                                     </div>
+                                </div>
+                                <div class="columns">
                                     <div class="column">
                                         <div class="field">
                                             <button id="clear" class="button is-danger is-outlined">Clear</button>
